feat: replace output device and management protocols
The org_kde_kwin_outputdevice and outputmanagement protocols are rewritten as
kwinft_output_device_unstable_v1 and kwinft_output_management_unstable_v1
protocols.

The respective Client and Server implementations are adapted.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -95,10 +95,10 @@ install(FILES  "${CMAKE_CURRENT_BINARY_DIR}/WraplandConfig.cmake"
         DESTINATION "${CMAKECONFIG_INSTALL_DIR}"
         COMPONENT Devel )
 
-install(EXPORT WraplandTargets DESTINATION "${CMAKECONFIG_INSTALL_DIR}" FILE WraplandTargets.cmake NAMESPACE KF5:: )
+install(EXPORT WraplandTargets DESTINATION "${CMAKECONFIG_INSTALL_DIR}" FILE WraplandTargets.cmake)
 
 
 install(FILES ${CMAKE_CURRENT_BINARY_DIR}/wrapland_version.h
-        DESTINATION ${KF5_INCLUDE_INSTALL_DIR} COMPONENT Devel )
+        DESTINATION ${INCLUDE_INSTALL_DIR} COMPONENT Devel )
 
 feature_summary(WHAT ALL FATAL_ON_MISSING_REQUIRED_PACKAGES)
