feat: support presentation time protocol
The presentation time protocol is an important stable protocol that allows clients to
receive information about the exact time their content was presented on an output device.

Closes #23.

--- a/autotests/client/CMakeLists.txt
+++ b/autotests/client/CMakeLists.txt
@@ -459,6 +459,18 @@ add_test(NAME wrapland-testServerSideDecorationPalette COMMAND testServerSideDec
 ecm_mark_as_test(testServerSideDecorationPalette)
 
 ########################################################
+# Test PresentationTime
+########################################################
+set( testPresentationTime_SRCS presentation_time.cpp )
+add_executable(testPresentationTime ${testPresentationTime_SRCS})
+target_link_libraries( testPresentationTime
+    Qt5::Test
+    Wrapland::Client
+    Wrapland::Server)
+add_test(NAME wrapland-testPresentationTime COMMAND testPresentationTime)
+ecm_mark_as_test(testPresentationTime)
+
+########################################################
 # Test RemoteAccess
 ########################################################
 set( testRemoteAccess_SRCS
