feat: implement wp_viewporter
This patch adds interfaces for specifying viewports via the wp_viewporter
protocol extension. This allows to make surface size and buffer independent
from each other. For example a video player can send 1080p video data while
the window of the player is of different size.

The server interface ViewportInterface is directly integrated with
SurfaceInterface. Viewport changes are double-buffered by that.

Added auto tests and with weston-scaler.

--- a/autotests/client/CMakeLists.txt
+++ b/autotests/client/CMakeLists.txt
@@ -1,4 +1,15 @@
 ########################################################
+# Test Viewporter
+########################################################
+set( testViewporter_SRCS
+        test_viewporter.cpp
+    )
+add_executable(testViewporter ${testViewporter_SRCS})
+target_link_libraries( testViewporter Qt5::Test Qt5::Gui Wrapland::Client Wrapland::Server Wayland::Client Wayland::Server)
+add_test(NAME wrapland-testViewporter COMMAND testViewporter)
+ecm_mark_as_test(testViewporter)
+
+########################################################
 # Test WaylandConnectionThread
 ########################################################
 set( testWaylandConnectionThread_SRCS
