ci: leave GitLab CI configuration file in default location
Moving the file to a different location can lead to problems with forks.
Instead add a link to the file in the ci/ directory for easy access.

--- a/ci/gitlab-ci.yml
+++ b/ci/gitlab-ci.yml
@@ -1,49 +1,1 @@
-stages:
-  - Compliance
-  - Build
-  - Tests
-
-Lint commit messages:
-  stage: Compliance
-  image: node:latest
-  script:
-    - yarn global add @commitlint/cli
-    - yarn add conventional-changelog-conventionalcommits
-    - git fetch -q origin master
-    - commitlint --config=ci/commitlint.config.js --from=origin/master
-  cache:
-    paths:
-      - node_modules/
-
-variables:
-  IMAGE_BASE: ${CI_REGISTRY}/${CI_PROJECT_NAMESPACE}/ci-images/archlinux/base:latest
-
-Arch Linux build:
-  stage: Build
-  image: ${IMAGE_BASE}
-  needs: []
-  script:
-    - pacman -Sy extra-cmake-modules --noconfirm
-    - mkdir ci-build && cd ci-build
-    - cmake -DCMAKE_INSTALL_PREFIX:PATH=/usr ../
-    - make -j$(nproc)
-    - make install -j$(nproc)
-  artifacts:
-    paths:
-      - ci-build
-    expire_in: 1 week
-
-Autotests:
-  stage: Tests
-  image: ${IMAGE_BASE}
-  dependencies:
-    - Arch Linux build
-  script:
-    - cd ci-build
-    - Xvfb :1 -ac -screen 0 1920x1080x24 > /dev/null 2>&1 &
-    - export DISPLAY=:1
-    - export WAYLAND_DEBUG=1
-    - export QT_LOGGING_RULES="*=true"
-    - ctest -N
-    # Tests currently can only run in one thread, see issue #3.
-    - dbus-run-session ctest --output-on-failure
+../.gitlab-ci.yml
