ci: hard-code project namespace in image location path
To be able to build the project from forks the image must be pulled from the
registry of upstream Wrapland project. Therefore the project namespace must
be hard-coded into the location path.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ Lint commit messages:
       - node_modules/
 
 variables:
-  IMAGE_BASE: ${CI_REGISTRY}/${CI_PROJECT_NAMESPACE}/ci-images/archlinux/base:latest
+  IMAGE_BASE: ${CI_REGISTRY}/kwinft/ci-images/archlinux/base:latest
 
 Arch Linux build:
   stage: Build
