ci: be verbose about the commit lint
For a better report show which commits were linted even if the lint succeeds.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ Lint commit messages:
     - yarn global add @commitlint/cli
     - yarn add conventional-changelog-conventionalcommits
     - git fetch -q origin master
-    - commitlint --config=ci/commitlint.config.js --from=origin/master
+    - commitlint --verbose --config=ci/commitlint.config.js --from=origin/master
   cache:
     paths:
       - node_modules/
