--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,6 +52,7 @@ Sanitizers build:
   stage: Test
   image: ${IMAGE_BASE}
   script:
+    - pacman -Sy breeze-icons --noconfirm --needed
     - cd ci-build
     - Xvfb :1 -ac -screen 0 1920x1080x24 > /dev/null 2>&1 &
     - export DISPLAY=:1
