--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,8 +9,9 @@ Lint commit messages:
   script:
     - yarn global add @commitlint/cli
     - yarn add conventional-changelog-conventionalcommits
-    - git fetch -q origin master
-    - commitlint --verbose --config=ci/commitlint.config.js --from=origin/master
+    - git remote add _upstream https://${CI_REGISTRY_USER}:${CI_REGISTRY_PASSWORD}@${CI_SERVER_HOST}/kwinft/wrapland.git
+    - git fetch -q --depth=1 _upstream master
+    - commitlint --verbose --config=ci/commitlint.config.js --from=_upstream/master
   cache:
     paths:
       - node_modules/
