ci: omit clang package installation
It is now directly installed in the base image.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,7 +41,7 @@ Normal build:
 Sanitizers build:
   <<: *common-build
   script:
-    - pacman -Sy extra-cmake-modules clang --noconfirm --needed
+    - pacman -Sy extra-cmake-modules --noconfirm --needed
     - mkdir ci-build && cd ci-build
     - cmake -DECM_ENABLE_SANITIZERS='address;leak;undefined'
       -DCMAKE_CXX_COMPILER=clang++ ../
