ci: replace deprecated syntax
Using the dependencies keyword together with the needs keyword is deprecated
and should not be used anymore. [1]

[1] https://docs.gitlab.com/ee/ci/yaml/#artifact-downloads-with-needs

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -69,13 +69,19 @@ Sanitizers build:
 
 Autotests:
   <<: *common-test
-  needs: ['Normal build', 'Message lint']
-  dependencies: ['Normal build']
+  needs:
+    - job: Normal build
+      artifacts: true
+    - job: Message lint
+      artifacts: false
 
 Sanitizers:
   <<: *common-test
-  needs: ['Sanitizers build', 'Message lint']
-  dependencies: ['Sanitizers build']
+  needs:
+    - job: Sanitizers build
+      artifacts: true
+    - job: Message lint
+      artifacts: false
 
 
 .trigger-script: &trigger-script
