ci: add stable trigger
Enable running the pipeline from stable branches (indicated by the
Plasma/ prefix) and triggering a stable rebuild upstream.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -84,12 +84,7 @@ Sanitizers:
       artifacts: false
 
 
-.trigger-script: &trigger-script
-  script: curl --request POST --form token=${CI_JOB_TOKEN} --form ref=master
-            --form "variables[TRIGGER_TYPE]=wrapland_rebuild"
-            ${CI_API_V4_URL}/projects/${TARGET_ID}/trigger/pipeline
-
-Image trigger:
+Master image trigger:
   stage: Integration
   rules:
     - if: '$CI_PROJECT_NAMESPACE == "kwinft" && $CI_COMMIT_BRANCH == "master" && $CI_PIPELINE_SOURCE == "push"'
@@ -97,4 +92,19 @@ Image trigger:
     - when: never
   variables:
     TARGET_ID: 17539846
-  <<: *trigger-script
+  script: curl --request POST --form token=${CI_JOB_TOKEN} --form ref=master
+            --form "variables[TRIGGER_TYPE]=wrapland_rebuild"
+            ${CI_API_V4_URL}/projects/${TARGET_ID}/trigger/pipeline
+
+Stable image trigger:
+  stage: Integration
+  rules:
+    - if: '$CI_PROJECT_NAMESPACE == "kwinft" && $CI_COMMIT_BRANCH =~ /^Plasma\// && $CI_PIPELINE_SOURCE == "push"'
+      when: on_success
+    - when: never
+  variables:
+    TARGET_ID: 17539846
+  script: curl --request POST --form token=${CI_JOB_TOKEN} --form ref=master
+            --form "variables[TRIGGER_TYPE]=wrapland_rebuild"
+            --form "variables[PLASMA_VERSION]=${CI_COMMIT_BRANCH}"
+            ${CI_API_V4_URL}/projects/${TARGET_ID}/trigger/pipeline
