--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,12 @@ stages:
 variables:
   IMAGE_BASE: ${CI_REGISTRY}/kwinft/ci-images/archlinux/base:latest
 
+workflow:
+  rules:
+    - if: $CI_MERGE_REQUEST_IID
+      when: never
+    - when: always
+
 
 Message lint:
   stage: Compliance
