--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ Message lint:
   rules:
     - if: $CI_MERGE_REQUEST_IID
       when: always
-    - if: '$CI_COMMIT_BRANCH == "master" || $CI_COMMIT_BRANCH =~ /^Plasma\//'
+    - if: '$CI_COMMIT_BRANCH == "master" || $CI_COMMIT_BRANCH =~ /^Plasma\// || $CI_COMMIT_TAG'
       when: never
     - when: always
   variables:
@@ -115,4 +115,17 @@ Stable image trigger:
   script: curl --request POST --form token=${CI_JOB_TOKEN} --form ref=master
             --form "variables[TRIGGER_TYPE]=wrapland_rebuild"
             --form "variables[PLASMA_VERSION]=${CI_COMMIT_BRANCH}"
+            ${CI_API_V4_URL}/projects/${TARGET_ID}/trigger/pipeline
+
+Stable image tag trigger:
+  stage: Integration
+  rules:
+    - if: '$CI_PROJECT_NAMESPACE == "kwinft" && $CI_COMMIT_TAG != null && $CI_PIPELINE_SOURCE == "push"'
+      when: on_success
+    - when: never
+  variables:
+    TARGET_ID: 17539846
+  script: curl --request POST --form token=${CI_JOB_TOKEN} --form ref=master
+            --form "variables[TRIGGER_TYPE]=wrapland_rebuild"
+            --form "variables[WRAPLAND_TAG]=${CI_COMMIT_TAG}"
             ${CI_API_V4_URL}/projects/${TARGET_ID}/trigger/pipeline
