feat(client): support wlr_output_management_unstable_v1
This allows clients to configure outputs on wlroots based compositors.

Because the support for this protocol is restricted to the client library there
is currently only minimal autotesting possible. In the future this limitation
could be neutralized by implementing a minimal wlroots based compositor
specifically for autotests.

Closes #19.

--- a/autotests/client/CMakeLists.txt
+++ b/autotests/client/CMakeLists.txt
@@ -129,6 +129,18 @@ add_test(NAME wrapland-testOutputDevice COMMAND testOutputDevice)
 ecm_mark_as_test(testOutputDevice)
 
 ########################################################
+# Test wlroots based OutputManagement
+########################################################
+set( test_wlr_output_management_SRCS
+        test_wlr_output_management.cpp
+    )
+add_executable(testWlrOutputManagement ${test_wlr_output_management_SRCS})
+target_link_libraries( testWlrOutputManagement
+    Qt5::Test Qt5::Gui Wrapland::Client Wrapland::Server Wayland::Client)
+add_test(NAME wrapland-testWlrOutputManagement COMMAND testWlrOutputManagement)
+ecm_mark_as_test(testWlrOutputManagement)
+
+########################################################
 # Test Compositor
 ########################################################
 set( testCompositor_SRCS
