--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -54,6 +54,8 @@ set(CLIENT_LIB_SRCS
     textinput_v0.cpp
     textinput_v2.cpp
     viewporter.cpp
+    wlr_output_configuration_v1.cpp
+    wlr_output_manager_v1.cpp
     xdgdecoration.cpp
     xdgshell.cpp
     xdgforeign_v2.cpp
@@ -80,6 +82,11 @@ ecm_add_wayland_client_protocol(CLIENT_LIB_SRCS
 ecm_add_wayland_client_protocol(CLIENT_LIB_SRCS
     PROTOCOL ${Wrapland_SOURCE_DIR}/src/client/protocols/kwinft-output-device-unstable-v1.xml
     BASENAME output-device-v1
+)
+
+ecm_add_wayland_client_protocol(CLIENT_LIB_SRCS
+    PROTOCOL ${Wrapland_SOURCE_DIR}/src/client/protocols/wlr-output-management-unstable-v1.xml
+    BASENAME wlr-output-management-v1
 )
 
 ecm_add_wayland_client_protocol(CLIENT_LIB_SRCS
@@ -204,6 +211,7 @@ set(CLIENT_GENERATED_FILES
     ${CMAKE_CURRENT_BINARY_DIR}/wayland-fullscreen-shell-client-protocol.h
     ${CMAKE_CURRENT_BINARY_DIR}/wayland-output-management-v1-client-protocol.h
     ${CMAKE_CURRENT_BINARY_DIR}/wayland-output-device-v1-client-protocol.h
+    ${CMAKE_CURRENT_BINARY_DIR}/wayland-wlr-output-management-v1-client-protocol.h
     ${CMAKE_CURRENT_BINARY_DIR}/wayland-plasma-shell-client-protocol.h
     ${CMAKE_CURRENT_BINARY_DIR}/wayland-plasma-shell-client-protocol.h
     ${CMAKE_CURRENT_BINARY_DIR}/wayland-plasma-window-management-client-protocol.h
@@ -289,6 +297,8 @@ set(CLIENT_LIB_HEADERS
   output_configuration_v1.h
   output_management_v1.h
   output_device_v1.h
+  wlr_output_configuration_v1.h
+  wlr_output_manager_v1.h
   pointer.h
   pointerconstraints.h
   plasmashell.h
