--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -18,8 +18,8 @@ if(BUILD_QCH)
         set(${var_name} ${_result})
     endmacro()
 
-    _make_absolute(Wrapland::Client_APIDOX_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/client")
-    _make_absolute(Wrapland::Server_APIDOX_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/server")
+    _make_absolute(WraplandClient_APIDOX_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/client")
+    _make_absolute(WraplandServer_APIDOX_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/server")
 
     ecm_add_qch(
         Wrapland_QCH
@@ -28,14 +28,14 @@ if(BUILD_QCH)
         VERSION ${PROJECT_VERSION}
         ORG_DOMAIN org.kde
         SOURCES # using only public headers, to cover only public API
-            ${Wrapland::Client_APIDOX_SRCS}
-            ${Wrapland::Server_APIDOX_SRCS}
+            ${WraplandClient_APIDOX_SRCS}
+            ${WraplandServer_APIDOX_SRCS}
         MD_MAINPAGE "${CMAKE_SOURCE_DIR}/README.md"
         LINK_QCHS
             Qt5Gui_QCH
         INCLUDE_DIRS
-            ${Wrapland::Client_APIDOX_BUILD_INCLUDE_DIRS}
-            ${Wrapland::Server_APIDOX_BUILD_INCLUDE_DIRS}
+            ${WraplandClient_APIDOX_BUILD_INCLUDE_DIRS}
+            ${WraplandServer_APIDOX_BUILD_INCLUDE_DIRS}
         BLANK_MACROS
             WRAPLANDCLIENT_EXPORT
             WRAPLANDSERVER_EXPORT
